--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,7 @@ main {
 /* Botón Flotante de Cerrar Sesion */
 #logoutButton{
     position: fixed;
-    top: 90px;
+    top: 20px;
     right: 20px;
     background-color: var(--color-primary);
     color: var(--color-text-light);
@@ -350,7 +350,7 @@ main {
 /*galeria*/
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 15px;
     padding: 20px;
 }
@@ -370,7 +370,7 @@ main {
 
 .gallery-item img {
     width: 100%;
-    height: 200px;
+    height: 300px;
     object-fit: cover;
     display: block;
     border-radius: var(--border-radius);
@@ -465,8 +465,8 @@ main {
     margin-bottom: 0.5rem;
 }
 
-.timeline-event img {
-    width: 100%;
+.timeline-event img {  
+    width: 55%;
     border-radius: var(--border-radius);
     margin-bottom: 1rem;
 }
@@ -686,7 +686,7 @@ main {
 /* Estilos para la tarjeta de música */
 .music-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 10px;
     padding: 20px;
 }
@@ -769,6 +769,8 @@ audio {
         font-size: 1.2em;
         cursor: pointer;
         transition: background-color 0.3s ease;
+        display: block;
+         margin: auto;
     }
 
     .sorpresa-btn:hover {
@@ -776,7 +778,7 @@ audio {
     }
 
     .sorpresa-content {
-        margin-top: 20px;
+        margin-top: 50px;
         padding: 20px;
         background-color: var(--color-background);
         border: 1px solid var(--color-border);
